--- a/config/mockingjay_libri.yaml
+++ b/config/mockingjay_libri.yaml
@@ -10,22 +10,22 @@ mockingjay:
   initializer_range: 0.02                               # The sttdev of the truncated_normal_initializer for initializing all weight matrices.
   layer_norm_eps: "1e-12"                               # The epsilon used by LayerNorm.
   mask_proportion: 0.15                                 # mask this percentage of all spectrogram frames in each sequence at random during MAM training                        
-  mask_consecutive_min: 2                               # mask this amount of consecutive frames
-  mask_consecutive_max: 2                               # mask this amount of consecutive frames
+  mask_consecutive_min: 1                               # mask this amount of consecutive frames
+  mask_consecutive_max: 1                               # mask this amount of consecutive frames
   mask_allow_overlap: True                              # allow overlap masking
   mask_bucket_ratio: 1.2                                # only used when overlap is not allowed. sample a mask from each bucket in size of [sampled mask_consecutive * mask_bucket_ratio]
-  mask_frequency: 8                                     # mask maximum this amount of frequency bands, set to 0 for no frequency mask
-  noise_proportion: 0.15                                # for this percentage of the time, Gaussian noise will be applied on all frames during MAM training, set to 0 for no noise
+  mask_frequency: 0                                     # mask maximum this amount of frequency bands, set to 0 for no frequency mask
+  noise_proportion: 0.00                                # for this percentage of the time, Gaussian noise will be applied on all frames during MAM training, set to 0 for no noise
   prune_headids: None                                   # Usage: 0,1,2,12-15 will prune headids [0,1,2,12,13,14]. headids = layerid * head_num + headid_in_layer
 
 
 optimizer: 
-  learning_rate: "4e-4"                                 # Learning rate for opt
+  learning_rate: "5e-5"                                 # Learning rate for opt
   loss_scale: 0                                         # Loss scale to improve fp16 numeric stability. Only used when apex is set to True. 0: dynamic loss scaling. positive power of 2: static loss scaling.
   warmup_proportion: 0.07                               # Proportion of training to perform linear rate warmup.
-  gradient_accumulation_steps: 1                        # Number of updates steps to accumulate before performing a backward/update pass
+  gradient_accumulation_steps: 4                        # Number of updates steps to accumulate before performing a backward/update pass
   gradient_clipping: 1.0                                # Maximum gradient norm
-  eps: 1.0e-6
+  eps: 1.0e-9
 
 
 dataloader:
@@ -80,7 +80,7 @@ solver:
   total_steps: 500000                                   # total steps for training, a step is a batch of update
   log_step: 100                                         # log training status every this amount of training steps
   dev_step: 10000                                       #
-  duo_feature: False                                    # Use different input / output features during training
+  duo_feature: True                                     # Use different input / output features during training
 
   # models
   load_model_list: ['SpecHead', 'Mockingjay']           # load the components in the list for test/eval
