--- a/config/separation.yaml
+++ b/config/separation.yaml
@@ -1,5 +1,5 @@
 model:                                                  # downstream model config
-  tasnet: 'ConvTasnet'  # 'ConvTasnet' or 'Transformer'
+  tasnet: 'Transformer'  # 'ConvTasnet' or 'Transformer'
   transformer:
     input_dim: &input_dim 512                                         # `int`, 39 for mfcc, 40 for fmllr, 80 for fbank, 160 for mel
     downsample_rate: 4                                    # stacked consecutive features vectors to reduce the length of input sequences by this factor.
@@ -21,6 +21,7 @@ model:                                                  # downstream model confi
     noise_proportion: 0.15                                # for this percentage of the time, Gaussian noise will be applied on all frames during MAM training, set to 0 for no noise
     prune_headids: None                                   # Usage: 0,1,2,12-15 will prune headids [0,1,2,12,13,14]. headids = layerid * head_num + headid_in_layer
     share_layer: True                                     # Share layer weights
+    pos_enc: 'Conv'
 
 
   separation:
