--- a/config/wavbert.yaml
+++ b/config/wavbert.yaml
@@ -21,8 +21,8 @@ model:                                                  # downstream model confi
     noise_proportion: 0.15                                # for this percentage of the time, Gaussian noise will be applied on all frames during MAM training, set to 0 for no noise
     prune_headids: None                                   # Usage: 0,1,2,12-15 will prune headids [0,1,2,12,13,14]. headids = layerid * head_num + headid_in_layer
     share_layer: True                                     # Share layer weights
-    pos_enc: 'Conv' # 'Conv' or 'Sinusoidal'
-    downsample_type: 'Conv' # 'Conv' or 'simple'
+    #pos_enc: 'Conv'
+    #downsample_type: 'Conv' # 'Conv' or 'simple'
 
 
   separation:
@@ -31,21 +31,22 @@ model:                                                  # downstream model confi
     stride: &stride 8                                          # ConvTasnet: 8, spectrogram: 80 for 10ms
     sample_rate: &sample_rate 8000
     segment: &seg_len 3                                       # length of segment in second
-    n_src: &n_src 2
+    n_src: &n_src 1
     fb_name: 'param_sinc'
+    p_inv: 'dec'
 
 
 optimizer: 
   learning_rate: "4e-4"                                 # Learning rate for opt. "4e-4" for 'data/libri_mel160_subword5000', "2e-4" for 'data/libri_fmllr_cmvn'
   loss_scale: 0                                         # Loss scale to improve fp16 numeric stability. Only used when apex is set to True. 0: dynamic loss scaling. positive power of 2: static loss scaling.
   warmup_proportion: 0.07                               # Proportion of training to perform linear rate warmup.
-  gradient_accumulation_steps: 3                        # Number of updates steps to accumulate before performing a backward/update pass
+  gradient_accumulation_steps: 1                        # Number of updates steps to accumulate before performing a backward/update pass
   gradient_clipping: 1.0                                # Maximum gradient norm
 
 
 dataloader:
   n_jobs: 6                                             # Subprocess used for torch Dataloader
-  batch_size: 6                                         # training batch size, 12 for pre-train, 6 for cpc exp
+  batch_size: 12                                         # training batch size, 12 for pre-train, 6 for cpc exp
   dev_batch_size: 12                                    # used for dev/test splits
   max_timestep: 0                                       # Max length for audio feature (0 for no restriction)
 
@@ -54,7 +55,7 @@ dataloader:
   dev_set: ['dev']                                #
   test_set: ['test']                              #
   train_proportion: 1.0                                 # Currently only effect the `phone classification task`, use this percent of `train_set` for downstream task training to demonstrate mockingjay generality
-  task: 'sep_clean'
+  task: 'enh_single'
   sample_rate: *sample_rate
   n_src: *n_src
   segment: *seg_len
